--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -16,13 +16,13 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('#pesquisaInicio').focus();
-            $('#filtroResult').click(function () {
-                $('#filtroMenu').animate({
+            $('.filterexpand').click(function () {
+                $('#front_filtro_menu').animate({
                     height: 'toggle'
                 }) //Mostra MEnu Filtro   
 
                 $('#confirmaFiltro').click(function () {
-                    $('#filtroMenu').fadeOut()
+                    $('#front_filtro_menu').fadeOut()
                 });
 
             });
@@ -36,13 +36,13 @@
     </script>
     <style type="text/css">
         html{
-    height:100%
-}
-    #botaoEstabelecimento {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
+          height:100%
+       }
+        #botaoEstabelecimento {
+          position: absolute;
+          right: 0;
+          top: 0;
+         }
         #botaoEstabelecimento:hover{cursor: pointer;opacity: 0.8}
         #confirmaFiltro{background: #00CC66;border: none;padding: 5px;color: #FFFFFF;float: right;border-radius: 3px;}
 
@@ -90,7 +90,7 @@ if (!empty($this->nomeCliente))
 <div align="center" width="80%">
 
     <div class="formBuscar">
-        <form action="/portal/index/consulta" method="post" class="" id='form1'>
+        <form action="/portal/index/consulta#filter_d" method="post" class="" id='form1'>
 
             <!-- <h2>Por favor, entre com os critérios de pesquisa. Você pode procurar por ingredientes específicos, lugares, pratos ou 
           qualquer outro critério disponível para trazer a opção mais certa para você!</h2> 
@@ -106,15 +106,15 @@ if (!empty($this->nomeCliente))
             <br>
 
             <div id="EnglobaPesquisaInicio">
-                <input type="button" id="filtroResult" value="Filtrar Por &#8628;">
-                <input class="form-control" type="textarea" name="criterio" id="pesquisaInicio"  
+                <!--input type="button" id="filtroResult" value="Filtrar Por &#8628;"-->
+               <input class="form-control" type="textarea" name="criterio" id="pesquisaInicio"  
                        value="" placeholder="Ingredientes específicos, lugares, pratos..."><input class="btn btn-primary" id="botaoPesquisar" type="submit" 
                        value="BUSCAR">
+              <span class="filterexpand"> Mais opcoes de filtro</span>
             </div>
             <br>
             <br>
             <p class="lead new_heading">Culinária:</p>
-
 
             <div  class="chkclass">
                 <?php
@@ -131,14 +131,12 @@ if (!empty($this->nomeCliente))
 
                 <?php } ?>
             </div>
-            <div id="filtroMenu">
+            <div id="front_filtro_menu" class="expanddv">
                 <font class="lead">Valor calórico até: </font><input  type="text" name="caloria" style="width:50" value="<?php echo $this->pesquisa_facapedido_caloria; ?>">
                 <br>
                 <br>
 
                 <p class="lead">Listar apenas estabelecimentos que oferecem: </p>
-
-
 
                 <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('diabetico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="diabetico" class=""> Produto especial para diabético<br>
                 <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('pouco_sal', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="pouco_sal" class=""> Produto com pouco sal<br>
@@ -146,7 +144,7 @@ if (!empty($this->nomeCliente))
                 <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('lactose', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="lactose" class=""> Produto sem lactose<br>
                 <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('organico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="organico" class=""> Produto orgânico<br>
                 <input type="button" id="confirmaFiltro" value="&#10004; Ok">	
-            </div>
+            </div-->
 
             <br><br><br>
 
@@ -157,7 +155,7 @@ if (!empty($this->nomeCliente))
     <!--<h3>Nosso sistema ainda não faz pedidos mas você pode simular suas compras e verificar o custo total. Compre em quantos estabelecimentos quiser. 
         Todos os itens escolhidos ficarão no seu carrinho.</h3>-->
 
-    <div style="margin-right: 90px;display:none" id="RemoveAdd">
+    <!--div style="margin-right: 90px;display:none" id="RemoveAdd">
 
         <form action="/portal/index/limpar-Carrinho" method="post" class="" >
             <div style="float: right; position: relative; ">
@@ -174,13 +172,34 @@ if (!empty($this->nomeCliente))
 
         <div style="clear: both;"></div>
 
-    </div>
+    </div-->
 
 
 
-    <div style="float: right;margin-right: 90px;position:fixed;bottom:0px" class="bottom-menu">
+    <div  class="bottom-menu">
         <h4> Seu pedido </h4>
 
+        
+    <div style="display:none" id="RemoveAdd">
+
+        <form action="/portal/index/limpar-Carrinho" method="post" class="" >
+            <div class="warning_btn" style="float: right; position: relative; ">
+                <input class="btn btn-warning" type="submit" value="Limpar Carrinho"> 
+            </div>
+        </form>
+
+        <form action="/portal/pedido/fechar-Pedido" method="post" class="" >
+            <div style="float: right; margin-right: 20px; ">
+                <input class="btn btn-success" type="submit" value="Fechar Pedido"> 
+            </div>
+        </form>
+
+
+        <div style="clear: both;"></div>
+
+    </div>
+
+        
         <table  id="tableListaPedido" style=" border-spacing: 10px; border-collapse: separate;" >  
         </table>
 
@@ -191,18 +210,20 @@ if (!empty($this->nomeCliente))
     <p style="padding-left: 50px;"><?php $this->headline; ?></p>
 
     <?php
-    if (!empty($this->pesquisa_facapedido_criterio)) {
-
-        for ($i = 0; $i < sizeof($this->resultado); $i++) {
+  
+    if (!empty($this->pesquisa_facapedido_criterio)) {   ?>
+       
+         <div class="popup1 popup1_txt <?php echo (count($this->resultado) >1) ? "scroladd" : "" ?> ">
+                <a class="close <?php echo (count($this->resultado) >1) ? "clsicon" : "" ?> " href="javascript:;"><span class="close"></span><span class="close1"></a> 
+<?php         for ($i = 0; $i < sizeof($this->resultado); $i++) {
             ?>
 
-            <div class="popup1">
-                <a class="close" href="javascript:;"><span class="close"></span><span class="close1"></a> 
+   
                 <div>
                     <p><img src='<?php echo $this->serverUrl() ?>/portal/index/get-Imagem-Produto/id/<?php echo $this->resultado[$i]['cod_foto'] ?>' width='100' height='auto' alt=''>
                     </p>
                 </div>
-                <div>
+                <div class="titletext">
                     <p class="title">
                         <?php echo $this->resultado[$i]["nome"]; ?>
                     <p class="para-text"> 
@@ -211,26 +232,34 @@ if (!empty($this->nomeCliente))
                     </p> </div> <!-- nome do produto -->
 
                 <!--	    //imprime os tamanhos disponiveis e precos do produto -->
-                <div class="grand">
+                <div class="grand grandnew">
                     <?php
+                   
+                    
                     //Sempre há pelo menos um tamanho, entao imprime esse
                     if (!empty($this->resultado[$i]['preco_promocional'])) {
+                    
                         $preco = (double) $this->resultado[$i]['preco_promocional'];
                         echo ($this->resultado[$i]['tamanho'] . "De ");
                         echo $this->resultado[$i]["preco"];
                         echo (" por ");
                         echo $this->resultado[$i]["preco_promocional"];
                     } else {
+                       
                         $preco = (double) $this->resultado[$i]['preco'];
                         echo $this->resultado[$i]['tamanho'] . "  " . $this->resultado[$i]["preco"];
-                    }
-
-                    //imprime o botao que vai permitir incluir no carrinho
-                    if ($this->resultado[$i]['isAberto'] == true) {
-                        echo "<img id='botaoAddCarrinho' src='/img/Create.png' style='margin-left:5px;'  onclick=\"javascript:addProdutoCarrinhoAjax(" . $this->resultado[$i]['cod_empresa'] . "," . $this->resultado[$i]['cod_tamanho_produto'] . ",'" . $this->resultado[$i]['razao_social'] . "','" . $this->resultado[$i]['nome'] . "','" . $this->resultado[$i]['tamanho'] . "'," . $preco . ")\"> ";
+                    } ?>
+                   <?php  // echo "<div style='font-weight: bold;'>" . $this->resultado[$i]["razao_social"] . " </div> <br> \n"; 
+                    //imprime o botao que vai permitir incluir no carrinho ?>
+                    <div class="plusicon_text"><p><?php  echo $this->resultado[$i]["razao_social"]; ?> 
+                    
+                       <?php if ($this->resultado[$i]['isAberto'] == true) {
+                        echo "<img id='botaoAddCarrinho' src='/img/Create.png' style='margin-left:5px;'  onclick=\"javascript:addProdutoCarrinhoAjax(" . $this->resultado[$i]['cod_empresa'] . "," . $this->resultado[$i]['cod_tamanho_produto'] . ",'" . $this->resultado[$i]['razao_social'] . "','" . $this->resultado[$i]['nome'] . "','" . $this->resultado[$i]['tamanho'] . "'," . $preco . ")\"></p> ";
                         echo "<input type='text' style='visibility: hidden;' size='2' maxlength='2' value='1' id='quantidade_" . $this->resultado[$i]['cod_empresa'] . "_" . $this->resultado[$i]['cod_tamanho_produto'] . "'>";
-                    }
-
+                    } ?>
+                    </div> <br> 
+                
+<?php 
                     if (($i + 1) < sizeof($this->resultado)) {
                         $i++;
                         //Esse laco verifica se existem outros tamanhos para o mesmo produto
@@ -266,7 +295,7 @@ if (!empty($this->nomeCliente))
 
                 <?php
                 echo "<div class='text1'>  \n";
-                echo "<div style='font-weight: bold;'>" . $this->resultado[$i]["razao_social"] . " </div> <br> \n";
+                
 
                 //verifica se a empresa esta atendendo nesse horario
                 if ($this->resultado[$i]['isAberto'] == true) {
@@ -284,6 +313,11 @@ if (!empty($this->nomeCliente))
             ?>
 
         </div> <!--fim resultado pesquisa-->   
+        
+        
+        
+        <div class="popup2">
+        </div>
 
     </div>
 
@@ -299,7 +333,7 @@ if (!empty($this->nomeCliente))
 
         echo "<div class='buscardv' style=' clear:both; color:black;' > \n";
         echo "<div><p><img src='/portal/loja/get-Logo-Empresa/id/" . $this->resultado[$i]['cod_empresa'] . "' width='141' height='auto' alt=''> </p> </div> \n";
-        echo "<div class='filter_result'>";
+        echo "<div id='filter_d' class='filter_result'>";
         echo "<div class='filter_result'>" . $this->resultado[$i]["razao_social"] . " </div> <br> ";
         echo $this->resultado[$i]["rua"] . " " . $this->resultado[$i]["numero"] . " " . $this->resultado[$i]["complemento"] . " " . $this->resultado[$i]["bairro"] . " <br> ";
         echo "Telefone 1: " . $this->resultado[$i]["telefone1"] . " Telefone 2 : " . $this->resultado[$i]["telefone2"] . " <br> \n";
