--- a/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
@@ -5,7 +5,7 @@
     <link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Bootstrap theme -->
-    <link type="text/css" href="/bootstrap/bootstrap-theme.min.css" rel="stylesheet">
+    <link type="text/css" href="/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Portal CSS-->
     <link type="text/css" href="/css/portal.css" rel="stylesheet" />
@@ -168,7 +168,7 @@ echo " </div>  \n";
 
 <div align="center" width="80%" style="clear:both;">
 
-    <div class="formBuscar">
+    <div class="">
 
         <?php
         if ($this->isAberto == true) {
