Voltei campos que tinha tirado no cadastro de empresa

--- a/whattoeat/application/modules/estabelecimento/views/scripts/empresa/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/empresa/index.phtml
@@ -145,7 +145,7 @@
                     </table>
                 </fieldset>
 
-<!-- Migrado para produto
+ 
 		<fieldset style=" margin: 0; padding: 0;">
                     <legend>Um pouco mais sobre seu perfil ...</legend>
                     <table class="tableFrm" cellspacing="8" cellpadding="0" border="0">
@@ -174,7 +174,7 @@
 
 			</tr>
 		    </table>
-		</fieldset>  -->
+		</fieldset>  
 
 
                 <table class="tableFrm" cellspacing="5" cellpadding="0" border="0">
